--- a/app/src/main/res/layout/fragment_user_registration.xml
+++ b/app/src/main/res/layout/fragment_user_registration.xml
@@ -91,6 +91,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/salvar_usuario"
+        android:enabled="false"
         android:textColor="@color/lime_950"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
