--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -91,6 +91,8 @@
                     android:id="@+id/tietNewPlannerActivityDate"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     android:hint="@string/escolha_a_data"/>
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -105,6 +107,8 @@
                     android:id="@+id/tietNewPlannerActivityTime"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     android:hint="@string/escolha_o_horario"/>
 
             </com.google.android.material.textfield.TextInputLayout>
