--- a/app/src/main/res/layout/item_planner_actitivity.xml
+++ b/app/src/main/res/layout/item_planner_actitivity.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/clPlannerActivityContainer"
     android:layout_width="match_parent"
     android:padding="@dimen/md_16dp"
     android:layout_margin="@dimen/xs_4dp"
@@ -10,7 +9,7 @@
     android:background="@drawable/bg_activity">
 
     <ImageView
-        android:id="@+id/ivIsCompleted"
+        android:id="@+id/ivStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/botao_de_conclusao_de_atividade"
@@ -26,7 +25,7 @@
         android:layout_marginHorizontal="@dimen/md_16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvDateTime"
-        app:layout_constraintStart_toEndOf="@+id/ivIsCompleted"
+        app:layout_constraintStart_toEndOf="@+id/ivStatus"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Academia em grupo" />
 
@@ -40,5 +39,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
