--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,6 +8,7 @@
     tools:context=".presentation.ui.HomeFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clHomeContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
