home fragment bottom sheet

--- a/app/src/main/res/layout/item_planner_actitivity.xml
+++ b/app/src/main/res/layout/item_planner_actitivity.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/clPlannerActivityContainer"
     android:layout_width="match_parent"
     android:padding="@dimen/md_16dp"
     android:layout_margin="@dimen/xs_4dp"
@@ -9,7 +10,7 @@
     android:background="@drawable/bg_activity">
 
     <ImageView
-        android:id="@+id/ivStatus"
+        android:id="@+id/ivIsCompleted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/botao_de_conclusao_de_atividade"
@@ -25,7 +26,7 @@
         android:layout_marginHorizontal="@dimen/md_16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tvDateTime"
-        app:layout_constraintStart_toEndOf="@+id/ivStatus"
+        app:layout_constraintStart_toEndOf="@+id/ivIsCompleted"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Academia em grupo" />
 
